[package]
name = "actix-cbor"
version = "0.1.5"
authors = ["noah <noah.kennedy.professional@gmail.com>"]
edition = "2018"
description = "CBOR support for Actix-Web"
readme = "README.md"
repository = "https://github.com/Noah-Kennedy/actix-cbor"
license = "MIT OR Apache-2.0"
keywords = ["serde", "actix", "cbor", "web", "async"]
categories = ["encoding", "web-programming", "compression", "asynchronous"]
exclude = ["CHANGELOG.md"]
publish = false

[features]
compress = ["actix-web/compress"]

[dependencies]
actix-http = " 3.0.0-beta.1"
actix-rt = " 2.0.0-beta.2"
actix-web = { version = "4.0.0-beta.1", default-features = false }
bytes = "1"
futures-util = "0.3"
log = "0.4"
serde = "1"
serde_cbor = "0.11"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }